security-intro/istio/mtls-default-ns.yaml
# [START istio_security_intro_istio_destinationrule_default]
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: default
  namespace: default
spec:
  host: '*.default.svc.cluster.local'
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
# [END istio_security_intro_istio_destinationrule_default]
---
